# AgentML

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: base_agent.py  critic_agent.py  data_agent.py  experiment_agent.py  feature_agent.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: llm.py
graph/: nodes.py  router.py  state.py  workflow.py
tools/: dataset_tools.py  evaluation_tools.py  explainability_tools.py  preprocessing_tools.py  training_tools.py
