[project]
name = "mlmeharder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "camelot-py>=1.0.0",
    "catboost>=1.2.7",
    "category-encoders>=2.6.3",
    "easyocr>=1.7.2",
    "fastapi>=0.115.0",
    "feature-engine>=1.8.1",
    "groq>=0.11.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.4",
    "lightgbm>=4.5.0",
    "llvmlite>=0.43.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.0",
    "mlflow>=2.16.0",
    "nltk>=3.9.1",
    "numba>=0.60.0",
    "numpy>=1.26.0",
    "ollama>=0.3.3",
    "pandas>=2.2.0",
    "pdfplumber>=0.11.4",
    "plotly>=5.24.0",
    "pydantic>=2.9.2",
    "pydantic-ai>=0.0.14",
    "pymupdf>=1.24.10",
    "pytesseract>=0.3.13",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=13.9.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "spacy>=3.8.2",
    "statsmodels>=0.14.3",
    "streamlit>=1.39.0",
    "tabula-py>=2.9.3",
    "tqdm>=4.66.5",
    "uvicorn>=0.30.6",
    "xgboost>=2.1.0",
]
